# VerifyIQ

./: .dockerignore  .gitignore  ACCURACY_TUNING.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CHANGELOG.md  CI_CD_DESIGN.md  CLEANUP_PROPOSAL.md  CODEBASE_AUDIT.md  CONFIDENCE_ANALYSIS.md  CONTRIBUTING.md  CONVERSATION_EVALUATION.md  FINAL_ACCURACY_REPORT.md  FINAL_COMPETITION_ANALYSIS.md  FINAL_COMPETITION_RESULTS.md  FINAL_INTERVIEW.md  FINAL_STRUCTURE.md  GOVERNANCE.md  IMPORT_OPTIMIZATION.md  LICENSE  OPTIMIZATION_PLAN.md  PACKAGE_GUIDE.md  PERFORMANCE_PROFILE.md  PROJECT_FLOW_REPORT.md  PROJECT_IDENTITY.md  README.md  REPOSITORY_AUDIT.md  REPOSITORY_MATURITY.md  RISK_GAP_REPORT.md  RISK_MODE_COMPARISON.md  TARGET_STRUCTURE.md  TRANSCRIPT_VALIDATION.md  V1_VS_V2.md  V2_API.md  V2_COMPETITIVE_ANALYSIS.md  V2_MODULES.md  VISION_PROVIDER_REQUIREMENTS.md  chat_transcript.txt  judge_interview.md  output.csv  (+7 more)
adversarial_evaluation/: adversarial_claims.csv  adversarial_report.md
api/: main.py
archive/: ARCHITECTURE.md  challenge_instructions_extracted.txt
code/: README.md  __init__.py  claim_parser.py  claim_processor.py  config.py  decision_agent.py  evidence_checker.py  evidence_requirements.py  image_preprocessor.py  image_validator.py  main.py  output_validator.py  prompts.py  requirements.txt  risk_analyzer.py  rule_engine.py  severity_engine.py  submission_critic.py  utils.py  vision_analyzer.py
dashboard/: README.md  app.py  run.py
dataset/: sample_claims.csv
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: ARCHITECTURE.md  JUDGE_INTERVIEW.md  REPRODUCIBILITY.md
examples/: 01_quickstart.py  02_v1_pipeline.py  03_v2_pipeline.py  04_security.py  README.md
reports/: FINAL_REVIEW.md  FINAL_VERDICT.md  ORGANIZATION_REVIEW.md  TREE_AUDIT.md  architecture_review.md  competitor_report.md  executive_scorecard.md  reproducibility_report.md  scalability_report.md
research/: .analysis_memory.py  .analysis_perf.py  output.csv
scripts/: deploy.ps1  deploy.sh
submission/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  JUDGE_INTERVIEW.md  README.md  RELIABILITY.md  REPRODUCIBILITY.md  RESULTS.md  SECURITY.md  WINNING_REVIEW.md
(+193 files in other folders)
